# Open-Vehicle-Monitoring-System-3

vehicle/OVMS.V3/components/vehicle_kianiroev2/: .editorconfig  CMakeLists.txt  component.mk
vehicle/OVMS.V3/components/vehicle_kianiroev2/docs/: index.rst
vehicle/OVMS.V3/components/vehicle_kianiroev2/src/: .astylerc  kn2_can_poll.cpp  kn2_can_send.cpp  kn2_commands.cpp  kn2_incoming_c_can.cpp  kn2_web.cpp  vehicle_kianiroev2.cpp  vehicle_kianiroev2.h
vehicle/OVMS.V3/main/: Kconfig
vehicle/OVMS.V3/support/: sdkconfig.default.hw31  sdkconfig.lilygo_tc
